public/css/styles.css
/* ... */
form .row:first-child .floating-label-form-group {
  border-top: 1px solid #e9ecef;
}

.footer {
  padding-top: 5rem;
  padding-bottom: 5rem;
  background-color: #00cfd5;
  color: #fff;
}

.copyright {
  background-color: #009da2;
}

#brandImage {
  height: 2rem;
}

.portfolio {
  padding-top: 6rem;
  padding-bottom: 4.5rem;
}

.page-section-heading {
  display: inline-block;
}

.pre {
  white-space: pre;
}

.pre-wrap {
  white-space: pre-wrap;
}

.icon-contact {
  display: flex;
  height: 5rem;
  width: 5rem;
  align-items: center;
  justify-content: center;
  font-size: 2rem;
  background-color: #1f2d41;
  color: #fff;
  border-radius: 100%;
}

.navbar-brand img {
  max-width: 13.5rem;
}

.btn-social {
  margin-bottom: 0.5rem;
}

.block {
  display:block;
  margin-right:5px;
  padding: 6px 12px;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 0.125rem solid #ced4da;
  border-radius: 0.5rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

#creatAccBtn {
  max-width: 13.5rem;
  
}
#loginAccBtn {
  max-width: 13.5rem;
}
#regPass {
  max-width: 13.5rem;
  display:block;
  margin-top: 8px; 
}
#regUser {
  width: 13.5rem;
  display:block;
  align-items: center;
  justify-content: center;
  color: rgb(0, 0, 0);
  display: block;
}
#loginBtn:hover {
background-color: #1f2d41;
font-size: small;
color: white;
}
#loginBtn {
  font-size: small;
}
#register {
  font-size: small;
}
#username {
  width: 125px;
  margin-right:5px;
  padding: 6px 12px;
  font-size: .8rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 0.125rem solid #ced4da;
  border-radius: 0.5rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}
#password {
  width: 125px;
  margin-right:5px;
  padding: 6px 12px;
  font-size: .8rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 0.125rem solid #ced4da;
  border-radius: 0.5rem;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}
.mainLogin {
  padding-left: 30px;
}
#truck-list-modal {
  display: inline-block;
}

.card {
  border: none;
}

/* Modal Registration */
#creatModalBtn {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-radius: 8px;
  border: 1px solid teal;
  margin-top: 30px;
}
#creatModalBtn:hover {
  background-color: #1f2d41;
/* font-size: small; */
color: white;
}

#congrat {
  margin-top: 20px;
}
#createAccount {
  background-color: #009da2;
  color: #fff;
}

